cleaned up commented out code

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header"><!--changed <div> tag to semantic <header> tag-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav><!--changed div to nav in both and it broke inline display and made it bulleted-->
+        <nav><!--changed div to nav-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,7 +25,7 @@
         </nav>
     </header><!--changed <div> tag to semantic header tag-->
    <img class="digital-marketing-meeting"><!--was div with closing tag, now image tag; changed name of class here and in css to match name in image file-->
-    <section class="content"><!--changed <div> tag to semantic <section> tag Could maybe also be <main>??-->
+    <section class="content"><!--changed <div> tag to semantic <section> tag-->
         <div class="content-box"> <!--removed unused ID tag, combined CSS styling into one class called section-->
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left" /> <!--alt tags added-->
             <h2>Search Engine Optimization</h2>
