added png of screenshot, added link to README

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -49,7 +49,7 @@
         </div>
     </section><!--changed <div> tag to semantic <section> tag-->
     <aside class="benefits"><!--changed <div> tag to semantic <aside> tag-->
-        <div class="aside"><!--maybe change these class names??-->
+        <div class="aside"><!--class name to match styling-->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
